--- a/.github/workflows/docker-image-dev.yml
+++ b/.github/workflows/docker-image-dev.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   update:
-    uses: codeshelldev/gh-actions/.github/workflows/docker-image.yaml@main
+    uses: codeshelldev/gh-actions/.github/workflows/docker-image.yml@main
     with:
       registry: ghcr.io
       flavor: |
