--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mailauth",
-  "version": "1.0.0",
+  "version": "none",
   "description": "",
   "homepage": "https://github.com/CodeShellDev/mailauth#readme",
   "bugs": {
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/CodeShellDev/mailauth.git"
   },
   "license": "MIT",
-  "author": "codeshell",
+  "author": "codeshelldev",
   "type": "commonjs",
   "main": "app.js",
   "scripts": {
